db seeding pt 1